ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
/* ... */
.activityStreamNoEntriesFoundPanel
{
	font-size: 14px;
	background-color: #EBECA5;
	border-color: #BABDB6;
	border-style: solid solid solid;
	border-width: 1px;
	padding: 5px 10px;
	position: absolute;
	top: 150px;
	z-index: 100;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.activityStreamCtrlFooter
{
	background-color: #EFEEEC;
	border-top: 1px solid #BABDB6;
	padding: 3px;
	vertical-align: middle;
	width: 100%;
	-moz-border-radius-bottomleft: 5px;
	-moz-border-radius-bottomright: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
}

.activityStreamFooterImages
{
	text-align: center; 
	vertical-align: middle;
	width: 100%;
}

.activityStreamCtrlHeader
{
	color: #5691A6 !important;
	font-size: 20px;
	padding-bottom: 20px;
	padding-left: 10px;
	padding-top: 10px;
}

.activityStreamCtrlHeader2
{
	padding-right: 250px;
}

.activityStreamCtrlHeaderTitle
{
	color: #5691a6;
	text-decoration: none;
}

.activityStreamCtrlHeaderSubtitle
{
	color: #b8b8b8;
	font-size: .7em;
	margin-left: .7em;
	padding: 5px;
	white-space: nowrap;
}

.activityStreamCtrlHeaderActionsTable
{
	position: absolute;
	right: 10px;
	top: 5px;
}

.activityStreamCtrlHeaderShowImg, .activityStreamCtrlHeaderRefresh, .activityStreamCtrlHeaderPausePlay
{
	cursor: pointer;
}

.activityStreamCtrlHeaderNextRefreshLabel
{
	color: #666666;
	font-size: 10px;
	text-align: right;
}

 .activityStreamCtrlHeaderShowSettingLabel
{
	color: #666666;
	cursor: pointer;
	font-size: 11px;
	padding-right: 5px;
	text-align: right;
}
 

.activityStreamHover, .shareThisDlgNameHover, .groupMembershipNameHover
{
	cursor: pointer;
	background: url(images/blends/teal_slice.png) repeat-x;
	background-position:center;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}
.activityStreamHover span {
	color: #135c8f;
}

.activityStreamCtrlSearchResultsPanel
{
	overflow: auto;
	padding-left: 10px;
	position: relative;
}

.activityStreamTopEntryMainPanel
{
	border-top: 0px solid #d2d5d1;
	padding-right: 5px;
	padding-bottom: 8px;
	padding-left: 0px;
	position: relative;
	margin-top: 8px;
}

.activityStreamCommentMainPanel
{
	border-top: 1px solid #d2d5d1;
	margin-left: 55px;
	margin-top: 10px;
	padding-right: 10px;
	padding-left: 0px;
	position: relative;
}

.activityStreamEntryAuthor
{
	color: #353838;
	display: inline;
	font-size: 11px;
	font-weight: bold;
	padding-right: 6px;
	padding-left: 1px;
	vertical-align: top;
}
.activityStreamEntryAuthor:hover
{
	color: #135c8f;
}
	
.activityStreamEntryDate
{
	font-size: 10px;
	color: #666666;
	display: inline;
	padding-right: 10px;
	white-space: nowrap;
	vertical-align: top;
}

.activityStreamTopEntryFullDesc
{
	color: #333333;
	font-size: 12px;
	margin-top: 4px;
	margin-left: 1px;
	position: relative;
}

.activityStreamTopEntryPartialDesc
{
	color: #333333;
	font-size: 12px;
	height: 4em;
	margin-top: 4px;
	margin-left: 1px;
	overflow: hidden;
	position: relative;
}

.activityStreamCommentFullDesc
{
	color: #333333;
	font-size: 12px;
	height: 2em;
	margin-top: 4px;
	margin-left: 1px;
	overflow: hidden;
	position: relative;
}

.activityStreamCommentPartialDesc
{
	color: #333333;
	font-size: 12px;
	height: 2em;
	margin-top: 4px;
	margin-left: 1px;
	overflow: hidden;
	position: relative;
}

.activityStreamShowHideDescLabel
{
	color: #135C8F !important;
	font-size: 10px;
	white-space: nowrap;
}

.activityStreamShowHideDescLabel:hover
{
	background: url(images/blends/teal_slice.png) repeat-x;
	background-position:center;
	cursor: pointer;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.activityStreamCommentAvatarImg
{
	left: 0;
	position: absolute;
	top: 1px;
	width: 25px;
}

.activityStreamTopEntryAvatarImg
{
	left: 2px;
	position: absolute;
	top: 1px;
	width: 40px;
}

.activityStreamCommentHeader
{
	border-top: 0px solid #d2d5d1;
	font-size: 13px;
	line-height: 15px;
	margin-left: 35px;
	padding-right: 25px;
}

.activityStreamTopEntryHeader
{
	background: #ededed;
	border-top: 1px solid #d2d5d1;
	padding-right: 65px;
	padding-left: 55px;
	-moz-border-radius-bottomleft: 3px;
	-moz-border-radius-bottomright: 3px;
	-webkit-border-bottom-left-radius: 3px;
	-webkit-border-bottom-right-radius: 3px;
}

.activityStreamCommentContentPanel
{
	font-size: 12px;
	margin-left: 35px;
	white-space: normal;
}

.activityStreamTopEntryContentPanel
{
	font-size: 13px;
	margin-top: 5px;
	margin-left: 55px;
	white-space: normal;
}

.activityStreamTopEntryTitlePanel
{
	padding-bottom: 4px;
	padding-right: 10px;
	padding-top: 4px;
}

.activityStreamCommentTitlePanel
{
	padding-bottom: 4px;
	padding-right: 30px;
	padding-top: 4px;
}

.activityStreamTopEntryTitle
{
	color: #135c8f;
	font-size: 14px;
	line-height: 15px;
}

.activityStreamCommentTitle
{
	color: #135c8f;
	font-size: 14px;
	line-height: 15px;
}

.activityStreamTopEntryBinderName
{
	color: #666666 !important;
	font-size: 10px;
	white-space: nowrap;
}

.activityStreamPresencePanel
{
	display: none;
	vertical-align: top;
}

.activityStreamNumCommentsPanel
{
    background: url(images/comments_25.png) no-repeat scroll center center transparent;
    color: #333333;
    cursor: pointer;
    font-size: 12px;
    font-weight: bold;
    padding-top: 2px;
    padding-bottom: 5px;
    padding-left: 8px;
    padding-right: 8px;
    text-align: center;
}

.activityStreamReply
{
	background-color: #F6F6F6;
	border: 1px solid #C4C4C4;
	left: 50px;
	margin-bottom: 10px;
	margin-top: .5em;
	padding: 5px;
	position: relative;
	width: 450px;
}

.activityStreamReplyTitlePanel, .shareThisTitlePanel
{
	padding-bottom: 5px;
}

.activityStreamReplyTitleTextBox, .shareThisTitleTextBox
{
	background-color: transparent;
	border: 0 none;
	color: #353838;
	font-family: Arial,Helvetica,sans-serif;
	font-size: 12px;
	font-weight: bold;
	width: 440px;
}
/* ... */

